fixed readme and repos

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "gatsby-starter-blog",
+  "name": "dan13ram-blog",
   "private": true,
-  "description": "A starter for a blog powered by Gatsby and Markdown",
+  "description": "Personal blog and portfolio website",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "Dhanwanthari Ramakrishnan <dan13ram@gmail.com>",
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/dan13ram/blog/issues"
   },
   "dependencies": {
     "gatsby": "^2.21.22",
@@ -41,15 +41,17 @@
     "dotenv": "^8.2.0",
     "prettier": "2.0.5"
   },
-  "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
+  "homepage": "https://github.com/dan13ram/blog#readme",
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "flamelink",
+    "react"
   ],
   "license": "MIT",
   "main": "n/a",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/gatsbyjs/gatsby-starter-blog.git"
+    "url": "git+https://github.com/dan13ram/blog.git"
   },
   "scripts": {
     "develop": "cross-env node_modules/.bin/gatsby develop",
