--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "url": "https://github.com/dan13ram/blog/issues"
   },
   "dependencies": {
+    "@iconify/icons-ant-design": "^1.0.8",
+    "@iconify/react": "^1.1.3",
     "gatsby": "^2.21.22",
     "gatsby-image": "^2.4.3",
     "gatsby-plugin-google-analytics": "^2.3.1",
